[metadata]
name = etcetra
version = attr: src.etcetra.__version__
description = Etcd client built with pure asyncio gRPC library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lablup/etcetra
author = Lablup Inc.
author_email = kyujin.cho@lablup.com
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development
project_urls =
    Documentation = https://github.com/lablup/etcetra/blob/main/docs/references.md
    Source = https://github.com/lablup/etcetra
    Tracker = https://github.com/lablup/etcetra/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.10
setup_requires =
    setuptools>=51.1.1
    wheel>=0.36.2
install_requires =
    protobuf==3.19.4  # limit until https://github.com/protocolbuffers/protobuf/issues/10571 is fixed
    grpcio==1.48.2
    grpcio-tools==1.48.2
    async-timeout~=4.0.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.36.2
    twine>=3.4.1
test =
    pytest~=6.2.5
    pytest-asyncio~=0.16.0
    pytest-cov>=2.11
    pytest-mock>=3.5.0
    codecov
dev =
lint =
    flake8>=4.0.1
    flake8-commas>=2.1
typecheck =
    mypy>=0.930
    types-protobuf
    types-setuptools

[options.packages.find]
where = src
include = *

[options.package_data]
etcetra = py.typed

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic,src/etcetra/grpc_api/**/*,src/etcetra/grpc_api/*

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
mypy_path = src
exclude = src/etcetra/grpc_api/
namespace_packages = true
explicit_package_bases = true

[mypy-etcetra.grpc_api.*]
follow_imports = skip

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 105
blank_line_before_nested_class_or_def = true
